<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:drawableStart="@drawable/ic_account_circle_black_24px"
            android:drawableLeft="@drawable/ic_account_circle_black_24px"
            android:drawablePadding="@dimen/dp_8"
            android:layout_alignParentTop="true"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_email_black_24px"
            android:drawableStart="@drawable/ic_email_black_24px"
            android:drawablePadding="@dimen/dp_8"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="@dimen/dp_8"/>
        <EditText
            android:id="@+id/et_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:hint="@string/write_about_yourself"
            android:drawableStart="@drawable/ic_message_black_24px"
            android:drawableLeft="@drawable/ic_message_black_24px"
            android:drawablePadding="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_below="@+id/et_email"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_below="@id/et_personal_info"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

    </RelativeLayout>
</RelativeLayout>